// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryCard should match the snapshot 1`] = `
<div
  className="card"
>
  <header>
    <h3
      className="cardTitle"
    >
      <img
        alt="star"
        className="star"
        height="21"
        src="Star.png"
      />
      Luke Skywalker
    </h3>
  </header>
  <div
    className="list-container"
  >
    <ul
      className="cardList"
    >
      <li>
        Homeworld: 
        Tatooine
      </li>
      <li>
        Species: 
        Human
      </li>
      <li>
        Population: 
        200000
      </li>
    </ul>
  </div>
  <footer>
    <button
      className="cardButton"
      onClick={[Function]}
    >
      <img
        alt="heart"
        className="faveHeart"
        src="Heart.png"
      />
      FAV
    </button>
  </footer>
</div>
`;

exports[`CategoryCard should match the snapshot 2`] = `
<div
  className="card"
>
  <header>
    <h3
      className="cardTitle"
    >
      <img
        alt="star"
        className="star"
        height="21"
        src="Star.png"
      />
    </h3>
  </header>
  <div
    className="list-container"
  >
    <ul
      className="cardList"
    >
      <li>
        Model: 
        Digger Crawler
      </li>
      <li>
        Passengers: 
        30
      </li>
    </ul>
  </div>
  <footer>
    <button
      className="cardButton"
      onClick={[Function]}
    >
      <img
        alt="heart"
        className="faveHeart"
        src="Heart.png"
      />
      FAV
    </button>
  </footer>
</div>
`;

exports[`CategoryCard should match the snapshot 3`] = `
<div
  className="card"
>
  <header>
    <h3
      className="cardTitle"
    >
      <img
        alt="star"
        className="star"
        height="21"
        src="Star.png"
      />
      Hoth
    </h3>
  </header>
  <div
    className="list-container"
  >
    <ul
      className="cardList"
    >
      <li>
        Terrain: 
        tundra, ice cave, mountain ranges
      </li>
      <li>
        Climate: 
        frozen
      </li>
    </ul>
  </div>
  <footer>
    <button
      className="cardButton"
      onClick={[Function]}
    >
      <img
        alt="heart"
        className="faveHeart"
        src="Heart.png"
      />
      FAV
    </button>
  </footer>
</div>
`;
